# pcsc-tester

./: Cargo.toml  README.md
.github/: README.md  pull_request_template.md  release.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  ci.yml  pr-validation.yml  release.yml
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/core/: commands.rs  mod.rs  reader.rs  utils.rs
src/gui/: app.rs  mod.rs
tests/: cli_integration_tests.rs  gui_unit_tests.rs  mock_pcsc_tests.rs
