[package]
name = "pcsc-tester"
version = "0.1.1"
edition = "2021"
authors = ["pcsc-tester"]
description = "Cross-platform PCSC tool for testing smart card readers with GUI and CLI interface"
license = "MIT"

[[bin]]
name = "pcsc-tester"
path = "src/main.rs"

[dependencies]
# PCSC communication
pcsc = "2"

# GUI framework
eframe = "0.29"
egui = "0.29"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization for config/history
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hex handling
hex = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# Date/time for logs
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
mockall = "0.13"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true